--- a/SVM_Binary_Classification.ipynb
+++ b/SVM_Binary_Classification.ipynb
@@ -205,7 +205,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv(r'E:\\Masters\\01-Study\\Master Thesis\\1-Working\\3rd Task (Laptop C implementation)\\3-SVM_scratch_Python\\Tutorial-3 (working)\\iris.csv')\n",
+    "data = pd.read_csv('/home/shoaib/Github/Support_Vector_Machine_Binary_Classification_from_scratch/Dataset_Iris.csv')\n",
     "data.head()"
    ]
   },
